# lua

./: .xlings.json  AGENTS.md  CMakeLists.txt  README.md  config.xlings  mcpp.toml  xmake.lua
.agents/skills/: README.md
.agents/skills/mcpplibs-capi-lua/: SKILL.md  reference.md
.github/workflows/: ci.yml
docs/: architecture.md
docs/pr/: design.md  tasks.md
examples/: basic.cpp  eval.cpp  function.cpp  table.cpp  xmake.lua
src/capi/: lua.cpp  lua.cppm  lua_headers.h
tests/: main.cpp  xmake.lua
